changed name to pear

--- a/17.businesscard.html
+++ b/17.businesscard.html
@@ -11,7 +11,7 @@
              src="images/meme1.JPG" 
              alt="itsameme">
         <div >
-            <h3>per harald borgen</h3>
+            <h3>pear harald borgen</h3>
             <p>frontend developer</p>
             <h4>oslo, norway</h4>
         </div>
